--- a/Navigation/Navigation/ru.lproj/Localizable.strings
+++ b/Navigation/Navigation/ru.lproj/Localizable.strings
@@ -15,6 +15,8 @@
 "login_button" = "Войти";
 "reg_label" = "Если у вас нет аккаунта, вы можете";
 "reg_button" = "зарегестрироваться";
+"error_faceIdTitle" = "Нет доступа";
+"error_faceID" = "Пожалуйста проверьте доступ к биометрии";
 
 "profile_navig_title" = "Профиль";
 "prem_alert" = ", для вас есть специальное предложение на Premium подписку с крутой скидкой";
