--- a/Navigation/Navigation/en.lproj/Localizable.strings
+++ b/Navigation/Navigation/en.lproj/Localizable.strings
@@ -15,6 +15,8 @@
 "login_button" = "Log In";
 "reg_label" = "If you don't have an account, you can";
 "reg_button" = "register";
+"error_faceIdTitle" = "No access";
+"error_faceID" = "Please allow access to biometrics";
 
 "profile_navig_title" = "Profile";
 "prem_alert" = ", there is a special offer for Premium subscription for you";
